--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 #************Users************
 #password reset
-#email vrification
+#email verification
 
 #password change, confirm old password
 
