--- a/readme
+++ b/readme
@@ -9,6 +9,7 @@
 #notification
 #catalog/ multiple images upload
 #query business without login
+#premium
 
 
 #*********************DONE*****************
