--- a/readme
+++ b/readme
@@ -15,6 +15,8 @@
 #disble subscription on expiration date
 #premium
 
+# logout 
+
 
 #*********************DONE*****************
 #certifcations/registration
